--- a/src/app/raw-data/raw-data.component.html
+++ b/src/app/raw-data/raw-data.component.html
@@ -1,9 +1,8 @@
 <div class="div_wrapper">
   <div #header class="div_header">
     <koia-main-toolbar [dialogStyle]="dialogStyle" *ngIf="!hideToolbar" [route]="route" [query]="query" [restoredQuery]="restoredQuery"
-                       (onFilterChange)="onFilterChanged($event)">
-    </koia-main-toolbar>
-    <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
+                       (onFilterChange)="onFilterChanged($event)" />
+    <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..." />
     <div id="view_toolbar">
       <button mat-icon-button [matMenuTriggerFor]="moreMenu">
         <mat-icon>more_vert</mat-icon>
@@ -59,7 +58,6 @@
   </div>
 
   <div #content id="div_table" class="div_content mat-elevation-z8 printable">
-
     <div [style.width]="considerColumnWidths ? tableStyleWidth + colWidthMeasurement : null">
       <table [class]="considerColumnWidths ? 'table_layout_fixed' : ''" mat-table [dataSource]="entries" matSort (matSortChange)="sortEntries($event)">
 
@@ -79,14 +77,11 @@
         <tr mat-row *matRowDef="let entry; columns: columnNames;" [style.background]="highlight ? entry['bgcolor'] : null"
             [style.color]="highlight ? entry['fgcolor'] : null">
         </tr>
-
-      </table>
-    </div>
-
-    <mat-paginator #paginator class="mat-paginator-sticky" [pageSize]="initialPageSize" [disabled]="loading"
+      </table>      
+      <mat-paginator #paginator class="mat-paginator-sticky" [pageSize]="initialPageSize" [disabled]="loading"
                    [pageSizeOptions]="pageSizeOptions" [pageIndex]="query.getPageIndex()" [length]="totalRowCount" (page)="onPageChanged()"
-                   [showFirstLastButtons]="true">
-    </mat-paginator>
+                   [showFirstLastButtons]="true" />
+    </div>        
 
   </div>
 </div>
